--- a/day03_mvc/src/main/webapp/WEB-INF/web.xml
+++ b/day03_mvc/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,14 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<!-- DB 관련 설정을 넣는 페이지. root-context.xml -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/root-context.xml</param-value>
 	</context-param>
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
+	<!--  필터, 이벤트 등 설정관련 내용  -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
@@ -20,15 +22,16 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value> <!-- 서블릿에 대한 기본 설정값이 담김 -->
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 		
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/</url-pattern><!-- 모든경로를 appServlet이 처리하겠다. -->
 	</servlet-mapping>
+	
 <filter>
    <filter-name>encodingFilter</filter-name>
    <filter-class>
@@ -46,5 +49,6 @@
 <filter-mapping>
    <filter-name>encodingFilter</filter-name>
    <url-pattern>/*</url-pattern>                 
-</filter-mapping>
+</filter-mapping> 
+
 </web-app>
