--- a/day06_member(security,daumMap,HashMap)/pom.xml
+++ b/day06_member(security,daumMap,HashMap)/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.care</groupId>
 	<artifactId>root</artifactId>
-	<name>quiz_project</name>
+	<name>day06_member</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
@@ -117,53 +117,43 @@
 			<scope>test</scope>
 		</dependency>  
 		
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-test</artifactId>
-    <version>${org.springframework-version}</version>
-    <scope>test</scope>
-</dependency>
-<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
-<!--  풀 관리 및 DB 연동, 설정해 줌 -->
+		<!-- 풀 관리 및 DB연동, 설정 -->
 <dependency>
     <groupId>com.zaxxer</groupId>
     <artifactId>HikariCP</artifactId>
     <version>3.3.1</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
-<!-- HikariCP를 통해 설정되어 있는 값으로 DB 접근 -->
+	<!-- HikariCP를 통해 설정되어 있는 값으로 DB접근  -->
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-jdbc</artifactId>
     <version>${org.springframework-version}</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc6 -->
+		<!-- 오라클 명령어 -->
 <dependency>
     <groupId>com.oracle.database.jdbc</groupId>
     <artifactId>ojdbc6</artifactId>
     <version>11.2.0.4</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
-<!-- mybatis 사용 ; xml에 쿼리문 실행 -->
+		<!-- mybatis 사용 : xml에 쿼리문 실행 -->
 <dependency>
     <groupId>org.mybatis</groupId>
     <artifactId>mybatis</artifactId>
     <version>3.4.6</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
+		<!-- spring에서 mybatis를 사용한다 -->
 <dependency>
     <groupId>org.mybatis</groupId>
     <artifactId>mybatis-spring</artifactId>
     <version>1.3.2</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+		
+		<!-- spring-security-web -->
 <dependency>
     <groupId>org.springframework.security</groupId>
     <artifactId>spring-security-web</artifactId>
     <version>${org.springframework-version}</version>
 </dependency>
-
 		
 		
 		      
