--- a/day08_file_ajax/pom.xml
+++ b/day08_file_ajax/pom.xml
@@ -116,44 +116,47 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency> 
-		
-		
-		<!-- HikariCP -->
+<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-test</artifactId>
+    <version>${org.springframework-version}</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
+<!--  풀 관리 및 DB 연동, 설정해 줌 -->
 <dependency>
     <groupId>com.zaxxer</groupId>
     <artifactId>HikariCP</artifactId>
     <version>3.3.1</version>
 </dependency>
-
-<!-- spring-jdbc -->
+<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+<!-- HikariCP를 통해 설정되어 있는 값으로 DB 접근 -->
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-jdbc</artifactId>
     <version>${org.springframework-version}</version>
 </dependency>
-
-<!-- ojdbc6 -->
+<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc6 -->
 <dependency>
     <groupId>com.oracle.database.jdbc</groupId>
     <artifactId>ojdbc6</artifactId>
     <version>11.2.0.4</version>
 </dependency>
-
-<!-- mybatis -->
+<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+<!-- mybatis 사용 ; xml에 쿼리문 실행 -->
 <dependency>
     <groupId>org.mybatis</groupId>
     <artifactId>mybatis</artifactId>
     <version>3.4.6</version>
 </dependency>
-
-<!-- 마이바티스와 스프링 연동 라이브러리 -->
+<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
 <dependency>
     <groupId>org.mybatis</groupId>
     <artifactId>mybatis-spring</artifactId>
     <version>1.3.2</version>
 </dependency>
-
-
+	
 <!-- commons-fileupload 파일 업/다운로드-->
 <dependency>
     <groupId>commons-fileupload</groupId>
@@ -166,6 +169,13 @@
     <groupId>commons-io</groupId>
     <artifactId>commons-io</artifactId>
     <version>2.4</version>
+</dependency>
+
+<!-- JSON.stringify(문자열 json타입 변경)  -->
+<dependency>
+   <groupId>com.fasterxml.jackson.core</groupId>
+   <artifactId>jackson-databind</artifactId>
+   <version>2.9.5</version>
 </dependency>
        
 	</dependencies>
