--- a/Xss_/pom.xml
+++ b/Xss_/pom.xml
@@ -115,7 +115,14 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency> 
+		
+		<!-- lucy-xss-servlet -->
+<dependency>
+    <groupId>com.navercorp.lucy</groupId>
+    <artifactId>lucy-xss-servlet</artifactId>
+    <version>2.0.1</version>
+</dependency>       
 	</dependencies>
     <build>
         <plugins>
