--- a/quiz_project/pom.xml
+++ b/quiz_project/pom.xml
@@ -117,6 +117,9 @@
 			<scope>test</scope>
 		</dependency>  
 		
+
+		
+		
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
 <dependency>
     <groupId>org.springframework</groupId>
@@ -163,8 +166,26 @@
     <artifactId>spring-security-web</artifactId>
     <version>${org.springframework-version}</version>
 </dependency>
+<!-- commons-fileupload -->
+<dependency>
+    <groupId>commons-fileupload</groupId>
+    <artifactId>commons-fileupload</artifactId>
+    <version>1.3.3</version>
+</dependency>
 
-		
+<!-- commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.4</version>
+</dependency>
+
+      <!-- lucy-xss-servlet -->
+<dependency>
+    <groupId>com.navercorp.lucy</groupId>
+    <artifactId>lucy-xss-servlet</artifactId>
+    <version>2.0.1</version>
+</dependency>
 		
 		      
 	</dependencies>
